# RoboGrammar

./: .gitignore  CMakeLists.txt  README.md  RuleViewer  basic.py  demo1.py  demo2.py
core/: CMakeLists.txt
examples/: setup.py
examples/pyrobotdesign_env/environments/: __init__.py  robot_locomotion.py  robot_locomotion_full_state.py
examples/pyrobotdesign_env/simulation/: simulation_utils.py
examples/pyrobotdesign_env/train/: arguments.py
examples/python_bindings/: CMakeLists.txt  py_robot_design.cpp
examples/rl/: setup.py
examples/rl/pyrobotdesign_env/: __init__.py  robot_locomotion.py
examples/rl/simulation/: simulation_utils.py
